--- a/registration/regserve/templates/regserve/student_confirm_delete.html
+++ b/registration/regserve/templates/regserve/student_confirm_delete.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Student Form</title>
+    <title>Student List Form</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -9,13 +9,17 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="container mt-5 text-center">
-    <div id="form_div">
-      <form id="student_form" method="POST">
-        {% csrf_token %} {{ form.as_p }}
-        <input type="submit" id="submit_button" value="save" />
-      </form>
-    </div>
+  <body class="container">
+    <form method="post">
+      {% csrf_token %}
+      <div>
+        <p>
+          Are you sure you want to delete <span> {{ object.firstname }} </span>
+          <span>{{object.lastname }}</span>
+        </p>
+      </div>
+      <input type="submit" value="Confirm" />
+    </form>
     <div>
       <p>
         <a href="/regserve/students/"> Back </a>
