--- a/registration/regserve/templates/regserve/student_detail.html
+++ b/registration/regserve/templates/regserve/student_detail.html
@@ -41,15 +41,11 @@
       </table>
     </div>
     <div>
-      <p>
-        <a href="/regserve/students/"> Back </a>
-      </p>
-      <p>
-        <a href="delete"> DELETE </a>
-      </p>
-      <p>
-        <a href="update"> UPDATE </a>
-      </p>
+      <a href="delete" class="btn btn-danger mx-1"> delete </a>
+      <a href="update" class="btn btn-primary mx-1"> update </a>
+      <a href="javascript:history.back()" class="btn btn-secondary mx-1">
+        back
+      </a>
     </div>
   </body>
 </html>
