--- a/registration/regserve/templates/regserve/student_confirm_delete.html
+++ b/registration/regserve/templates/regserve/student_confirm_delete.html
@@ -9,7 +9,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="container">
+  <body class="container mt-5 text-center">
     <form method="post">
       {% csrf_token %}
       <div>
@@ -18,12 +18,8 @@
           <span>{{object.lastname }}</span>
         </p>
       </div>
-      <input type="submit" value="Confirm" />
+      <input type="submit" value="confirm" class="btn btn-danger mx-1" />
+      <a href="javascript:history.back()" class="btn btn-secondary"> back </a>
     </form>
-    <div>
-      <p>
-        <a href="/regserve/students/"> Back </a>
-      </p>
-    </div>
   </body>
 </html>
