--- a/registration/regserve/templates/regserve/student_form.html
+++ b/registration/regserve/templates/regserve/student_form.html
@@ -13,13 +13,15 @@
     <div id="form_div">
       <form id="student_form" method="POST">
         {% csrf_token %} {{ form.as_p }}
-        <input type="submit" id="submit_button" value="save" />
+        <input
+          type="submit"
+          id="submit_button"
+          value="save"
+          class="btn btn-primary"
+        />
+        <a href="javascript:history.back()" class="btn btn-secondary"> back </a>
       </form>
     </div>
-    <div>
-      <p>
-        <a href="/regserve/students/"> Back </a>
-      </p>
-    </div>
+    <div></div>
   </body>
 </html>
